fix model prediction

--- a/backend/app/model/notebooks/data_prep.ipynb
+++ b/backend/app/model/notebooks/data_prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "id": "30cdc1c5",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "id": "b3d0539d",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "id": "34f8cf15",
    "metadata": {},
    "outputs": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "id": "44c56c1b",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "id": "657c73f8",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "id": "2c3e844e",
    "metadata": {},
    "outputs": [
@@ -73,7 +73,7 @@
        "(26099, 2)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "id": "137b8b89",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,7 @@
        "9  7194014163  {'result': {'players': [{'account_id': 3127228..."
       ]
      },
-     "execution_count": 54,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "id": "a9637bc7",
    "metadata": {},
    "outputs": [
@@ -205,7 +205,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
    "id": "202a5c19",
    "metadata": {},
    "outputs": [],
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 11,
    "id": "4601e389",
    "metadata": {},
    "outputs": [
@@ -236,7 +236,7 @@
        "(26099, 2)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 12,
    "id": "a16e8445",
    "metadata": {},
    "outputs": [],
@@ -257,13 +257,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 13,
    "id": "55be8d21",
    "metadata": {},
    "outputs": [],
    "source": [
     "df['dt'] = df[\"data\"].apply(lambda x: x.get(\"result\", {}).get(\"start_time\"))\n",
     "df['dt'] = pd.to_datetime(df['dt'], unit='s')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "f03d5bea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['league_id'] = df[\"data\"].apply(lambda x: x.get(\"result\", {}).get(\"league_id\"))"
    ]
   },
   {
