refactor db service + update/refactor notebooks

--- a/backend/app/model/data_prep/extract_pro_games.ipynb
+++ b/backend/app/model/data_prep/extract_pro_games.ipynb
@@ -81,7 +81,7 @@
     "\n",
     "API_URL = 'https://api.opendota.com/api'\n",
     "\n",
-    "def get_pro_matches(initial_match_id: int, total_matches: int) -> pd.DataFrame:\n",
+    "def get_pro_matches(initial_match_id, total_matches):\n",
     "    params = {\n",
     "        \"lobby_type\": 1,  \n",
     "        \"limit\": 100,\n",
@@ -94,7 +94,6 @@
     "    df = pd.DataFrame()\n",
     "\n",
     "    for i in range(num_requests):\n",
-    "        print(i)\n",
     "        sleep(1)\n",
     "        try:\n",
     "            response = requests.get(f'{API_URL}/proMatches', params=params)\n",
@@ -108,7 +107,6 @@
     "                })\n",
     "                df = pd.concat((df, match_df))\n",
     "                \n",
-    "                # Update the less_than_match_id parameter for the next request\n",
     "                if data:\n",
     "                    params[\"less_than_match_id\"] = data[-1]['match_id']\n",
     "                else:\n",
@@ -116,10 +114,10 @@
     "                    break\n",
     "            else:\n",
     "                logger.info(f'Something went wrong while requesting opendota API {response.status_code}, {response.text}')\n",
-    "                break  # Stop the loop if there is an error in the request\n",
+    "                break  \n",
     "        except Exception as e:\n",
     "            logger.info(f'Something went wrong {str(e)}')\n",
-    "            break  # Stop the loop if there is an exception\n",
+    "            break \n",
     "\n",
     "        if len(df) >= total_matches:\n",
     "            break\n",
@@ -131,169 +129,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "74bb788b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n",
-      "21\n",
-      "22\n",
-      "23\n",
-      "24\n",
-      "25\n",
-      "26\n",
-      "27\n",
-      "28\n",
-      "29\n",
-      "30\n",
-      "31\n",
-      "32\n",
-      "33\n",
-      "34\n",
-      "35\n",
-      "36\n",
-      "37\n",
-      "38\n",
-      "39\n",
-      "40\n",
-      "41\n",
-      "42\n",
-      "43\n",
-      "44\n",
-      "45\n",
-      "46\n",
-      "47\n",
-      "48\n",
-      "49\n",
-      "50\n",
-      "51\n",
-      "52\n",
-      "53\n",
-      "54\n",
-      "55\n",
-      "56\n",
-      "57\n",
-      "58\n",
-      "59\n",
-      "60\n",
-      "61\n",
-      "62\n",
-      "63\n",
-      "64\n",
-      "65\n",
-      "66\n",
-      "67\n",
-      "68\n",
-      "69\n",
-      "70\n",
-      "71\n",
-      "72\n",
-      "73\n",
-      "74\n",
-      "75\n",
-      "76\n",
-      "77\n",
-      "78\n",
-      "79\n",
-      "80\n",
-      "81\n",
-      "82\n",
-      "83\n",
-      "84\n",
-      "85\n",
-      "86\n",
-      "87\n",
-      "88\n",
-      "89\n",
-      "90\n",
-      "91\n",
-      "92\n",
-      "93\n",
-      "94\n",
-      "95\n",
-      "96\n",
-      "97\n",
-      "98\n",
-      "99\n",
-      "100\n",
-      "101\n",
-      "102\n",
-      "103\n",
-      "104\n",
-      "105\n",
-      "106\n",
-      "107\n",
-      "108\n",
-      "109\n",
-      "110\n",
-      "111\n",
-      "112\n",
-      "113\n",
-      "114\n",
-      "115\n",
-      "116\n",
-      "117\n",
-      "118\n",
-      "119\n",
-      "120\n",
-      "121\n",
-      "122\n",
-      "123\n",
-      "124\n",
-      "125\n",
-      "126\n",
-      "127\n",
-      "128\n",
-      "129\n",
-      "130\n",
-      "131\n",
-      "132\n",
-      "133\n",
-      "134\n",
-      "135\n",
-      "136\n",
-      "137\n",
-      "138\n",
-      "139\n",
-      "140\n",
-      "141\n",
-      "142\n",
-      "143\n",
-      "144\n",
-      "145\n",
-      "146\n",
-      "147\n",
-      "148\n",
-      "149\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_test = get_pro_matches(6652786921, 15000)"
+    "df_matches = get_pro_matches(7258005870, 15000)"
    ]
   },
   {
@@ -391,7 +232,7 @@
     }
    ],
    "source": [
-    "df_test.head(10)"
+    "df_matches.head(10)"
    ]
   },
   {
@@ -412,7 +253,7 @@
     }
    ],
    "source": [
-    "len(df_test)"
+    "len(df_matches)"
    ]
   },
   {
@@ -422,7 +263,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Get detailed information about each game by it's game id\n",
     "API_URL = f\"https://api.steampowered.com/IDOTA2Match_570/GetMatchDetails/v1/?key={API_KEY}\"\n",
     "\n",
     "def get_match_details(match_id: int):\n",
@@ -433,10 +273,10 @@
     "            match_data = response.json()\n",
     "            return match_data\n",
     "        else:\n",
-    "            logger.info(f\"Error occurred while fetching match details for match ID {match_id}, {response.status_code}, {response.text}.\")\n",
+    "            logger.error(f\"Error occurred while fetching match details for match ID {match_id}, {response.status_code}, {response.text}.\")\n",
     "            return None\n",
     "    except:\n",
-    "        logger.info(f'{response.status_code}')\n",
+    "        logger.error(f'{response.status_code}')\n",
     "        return None\n",
     "\n",
     "def process_matches(df: pd.DataFrame) -> pd.DataFrame:\n",
@@ -448,7 +288,7 @@
     "        try:\n",
     "            match_data = get_match_details(match_id)\n",
     "        except Exception as e: \n",
-    "            logger.info(f'Error while executing get_match_details {str(e)}')\n",
+    "            logger.error(f'Error while executing get_match_details {str(e)}')\n",
     "\n",
     "        if match_data:\n",
     "            data_list.append(match_data) \n",
@@ -1027,23 +867,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# Create a cursor object\n",
     "cur = conn.cursor()\n",
     "\n",
-    "# Convert the DataFrame to a list of dictionaries\n",
     "data = df_with_details.to_dict('records')\n",
     "\n",
-    "# Create the INSERT INTO SQL query\n",
     "table = 'dota_dds.pro_matches'\n",
     "cols = ','.join(list(data[0].keys()))\n",
     "vals = ', '.join(['%s'] * len(data[0]))\n",
     "query = f\"INSERT INTO {table}({cols}) VALUES ({vals})\"\n",
     "\n",
-    "# Use the `executemany` method to insert the records\n",
     "cur.executemany(query, [tuple(json.dumps(d[col]) if isinstance(d[col], dict) else d[col] for col in df_with_details.columns) for d in data])\n",
     "\n",
-    "# Commit the transaction and close the connection\n",
     "conn.commit()\n",
     "cur.close()\n",
     "conn.close()"
@@ -1051,60 +885,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0c9bd1f0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "238ce9ad",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "71b547f1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "118d98aa",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ca831b40",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a2125b10",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 90,
    "id": "8aed59e7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Retrieve hero_name - id dictionary\n",
     "API_URL = f\"http://api.steampowered.com/IEconDOTA2_570/GetHeroes/v1?key={API_KEY}\"\n",
     "\n",
     "response = requests.get(API_URL)\n",
@@ -1119,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 93,
    "id": "3e5bb805",
    "metadata": {},
    "outputs": [
@@ -1130,135 +915,16 @@
        " {'name': 'npc_dota_hero_axe', 'id': 2},\n",
        " {'name': 'npc_dota_hero_bane', 'id': 3},\n",
        " {'name': 'npc_dota_hero_bloodseeker', 'id': 4},\n",
-       " {'name': 'npc_dota_hero_crystal_maiden', 'id': 5},\n",
-       " {'name': 'npc_dota_hero_drow_ranger', 'id': 6},\n",
-       " {'name': 'npc_dota_hero_earthshaker', 'id': 7},\n",
-       " {'name': 'npc_dota_hero_juggernaut', 'id': 8},\n",
-       " {'name': 'npc_dota_hero_mirana', 'id': 9},\n",
-       " {'name': 'npc_dota_hero_nevermore', 'id': 11},\n",
-       " {'name': 'npc_dota_hero_morphling', 'id': 10},\n",
-       " {'name': 'npc_dota_hero_phantom_lancer', 'id': 12},\n",
-       " {'name': 'npc_dota_hero_puck', 'id': 13},\n",
-       " {'name': 'npc_dota_hero_pudge', 'id': 14},\n",
-       " {'name': 'npc_dota_hero_razor', 'id': 15},\n",
-       " {'name': 'npc_dota_hero_sand_king', 'id': 16},\n",
-       " {'name': 'npc_dota_hero_storm_spirit', 'id': 17},\n",
-       " {'name': 'npc_dota_hero_sven', 'id': 18},\n",
-       " {'name': 'npc_dota_hero_tiny', 'id': 19},\n",
-       " {'name': 'npc_dota_hero_vengefulspirit', 'id': 20},\n",
-       " {'name': 'npc_dota_hero_windrunner', 'id': 21},\n",
-       " {'name': 'npc_dota_hero_zuus', 'id': 22},\n",
-       " {'name': 'npc_dota_hero_kunkka', 'id': 23},\n",
-       " {'name': 'npc_dota_hero_lina', 'id': 25},\n",
-       " {'name': 'npc_dota_hero_lich', 'id': 31},\n",
-       " {'name': 'npc_dota_hero_lion', 'id': 26},\n",
-       " {'name': 'npc_dota_hero_shadow_shaman', 'id': 27},\n",
-       " {'name': 'npc_dota_hero_slardar', 'id': 28},\n",
-       " {'name': 'npc_dota_hero_tidehunter', 'id': 29},\n",
-       " {'name': 'npc_dota_hero_witch_doctor', 'id': 30},\n",
-       " {'name': 'npc_dota_hero_riki', 'id': 32},\n",
-       " {'name': 'npc_dota_hero_enigma', 'id': 33},\n",
-       " {'name': 'npc_dota_hero_tinker', 'id': 34},\n",
-       " {'name': 'npc_dota_hero_sniper', 'id': 35},\n",
-       " {'name': 'npc_dota_hero_necrolyte', 'id': 36},\n",
-       " {'name': 'npc_dota_hero_warlock', 'id': 37},\n",
-       " {'name': 'npc_dota_hero_beastmaster', 'id': 38},\n",
-       " {'name': 'npc_dota_hero_queenofpain', 'id': 39},\n",
-       " {'name': 'npc_dota_hero_venomancer', 'id': 40},\n",
-       " {'name': 'npc_dota_hero_faceless_void', 'id': 41},\n",
-       " {'name': 'npc_dota_hero_skeleton_king', 'id': 42},\n",
-       " {'name': 'npc_dota_hero_death_prophet', 'id': 43},\n",
-       " {'name': 'npc_dota_hero_phantom_assassin', 'id': 44},\n",
-       " {'name': 'npc_dota_hero_pugna', 'id': 45},\n",
-       " {'name': 'npc_dota_hero_templar_assassin', 'id': 46},\n",
-       " {'name': 'npc_dota_hero_viper', 'id': 47},\n",
-       " {'name': 'npc_dota_hero_luna', 'id': 48},\n",
-       " {'name': 'npc_dota_hero_dragon_knight', 'id': 49},\n",
-       " {'name': 'npc_dota_hero_dazzle', 'id': 50},\n",
-       " {'name': 'npc_dota_hero_rattletrap', 'id': 51},\n",
-       " {'name': 'npc_dota_hero_leshrac', 'id': 52},\n",
-       " {'name': 'npc_dota_hero_furion', 'id': 53},\n",
-       " {'name': 'npc_dota_hero_life_stealer', 'id': 54},\n",
-       " {'name': 'npc_dota_hero_dark_seer', 'id': 55},\n",
-       " {'name': 'npc_dota_hero_clinkz', 'id': 56},\n",
-       " {'name': 'npc_dota_hero_omniknight', 'id': 57},\n",
-       " {'name': 'npc_dota_hero_enchantress', 'id': 58},\n",
-       " {'name': 'npc_dota_hero_huskar', 'id': 59},\n",
-       " {'name': 'npc_dota_hero_night_stalker', 'id': 60},\n",
-       " {'name': 'npc_dota_hero_broodmother', 'id': 61},\n",
-       " {'name': 'npc_dota_hero_bounty_hunter', 'id': 62},\n",
-       " {'name': 'npc_dota_hero_weaver', 'id': 63},\n",
-       " {'name': 'npc_dota_hero_jakiro', 'id': 64},\n",
-       " {'name': 'npc_dota_hero_batrider', 'id': 65},\n",
-       " {'name': 'npc_dota_hero_chen', 'id': 66},\n",
-       " {'name': 'npc_dota_hero_spectre', 'id': 67},\n",
-       " {'name': 'npc_dota_hero_doom_bringer', 'id': 69},\n",
-       " {'name': 'npc_dota_hero_ancient_apparition', 'id': 68},\n",
-       " {'name': 'npc_dota_hero_ursa', 'id': 70},\n",
-       " {'name': 'npc_dota_hero_spirit_breaker', 'id': 71},\n",
-       " {'name': 'npc_dota_hero_gyrocopter', 'id': 72},\n",
-       " {'name': 'npc_dota_hero_alchemist', 'id': 73},\n",
-       " {'name': 'npc_dota_hero_invoker', 'id': 74},\n",
-       " {'name': 'npc_dota_hero_silencer', 'id': 75},\n",
-       " {'name': 'npc_dota_hero_obsidian_destroyer', 'id': 76},\n",
-       " {'name': 'npc_dota_hero_lycan', 'id': 77},\n",
-       " {'name': 'npc_dota_hero_brewmaster', 'id': 78},\n",
-       " {'name': 'npc_dota_hero_shadow_demon', 'id': 79},\n",
-       " {'name': 'npc_dota_hero_lone_druid', 'id': 80},\n",
-       " {'name': 'npc_dota_hero_chaos_knight', 'id': 81},\n",
-       " {'name': 'npc_dota_hero_meepo', 'id': 82},\n",
-       " {'name': 'npc_dota_hero_treant', 'id': 83},\n",
-       " {'name': 'npc_dota_hero_ogre_magi', 'id': 84},\n",
-       " {'name': 'npc_dota_hero_undying', 'id': 85},\n",
-       " {'name': 'npc_dota_hero_rubick', 'id': 86},\n",
-       " {'name': 'npc_dota_hero_disruptor', 'id': 87},\n",
-       " {'name': 'npc_dota_hero_nyx_assassin', 'id': 88},\n",
-       " {'name': 'npc_dota_hero_naga_siren', 'id': 89},\n",
-       " {'name': 'npc_dota_hero_keeper_of_the_light', 'id': 90},\n",
-       " {'name': 'npc_dota_hero_wisp', 'id': 91},\n",
-       " {'name': 'npc_dota_hero_visage', 'id': 92},\n",
-       " {'name': 'npc_dota_hero_slark', 'id': 93},\n",
-       " {'name': 'npc_dota_hero_medusa', 'id': 94},\n",
-       " {'name': 'npc_dota_hero_troll_warlord', 'id': 95},\n",
-       " {'name': 'npc_dota_hero_centaur', 'id': 96},\n",
-       " {'name': 'npc_dota_hero_magnataur', 'id': 97},\n",
-       " {'name': 'npc_dota_hero_shredder', 'id': 98},\n",
-       " {'name': 'npc_dota_hero_bristleback', 'id': 99},\n",
-       " {'name': 'npc_dota_hero_tusk', 'id': 100},\n",
-       " {'name': 'npc_dota_hero_skywrath_mage', 'id': 101},\n",
-       " {'name': 'npc_dota_hero_abaddon', 'id': 102},\n",
-       " {'name': 'npc_dota_hero_elder_titan', 'id': 103},\n",
-       " {'name': 'npc_dota_hero_legion_commander', 'id': 104},\n",
-       " {'name': 'npc_dota_hero_ember_spirit', 'id': 106},\n",
-       " {'name': 'npc_dota_hero_earth_spirit', 'id': 107},\n",
-       " {'name': 'npc_dota_hero_terrorblade', 'id': 109},\n",
-       " {'name': 'npc_dota_hero_phoenix', 'id': 110},\n",
-       " {'name': 'npc_dota_hero_oracle', 'id': 111},\n",
-       " {'name': 'npc_dota_hero_techies', 'id': 105},\n",
-       " {'name': 'npc_dota_hero_winter_wyvern', 'id': 112},\n",
-       " {'name': 'npc_dota_hero_arc_warden', 'id': 113},\n",
-       " {'name': 'npc_dota_hero_abyssal_underlord', 'id': 108},\n",
-       " {'name': 'npc_dota_hero_monkey_king', 'id': 114},\n",
-       " {'name': 'npc_dota_hero_pangolier', 'id': 120},\n",
-       " {'name': 'npc_dota_hero_dark_willow', 'id': 119},\n",
-       " {'name': 'npc_dota_hero_grimstroke', 'id': 121},\n",
-       " {'name': 'npc_dota_hero_mars', 'id': 129},\n",
-       " {'name': 'npc_dota_hero_void_spirit', 'id': 126},\n",
-       " {'name': 'npc_dota_hero_snapfire', 'id': 128},\n",
-       " {'name': 'npc_dota_hero_hoodwink', 'id': 123},\n",
-       " {'name': 'npc_dota_hero_dawnbreaker', 'id': 135},\n",
-       " {'name': 'npc_dota_hero_marci', 'id': 136},\n",
-       " {'name': 'npc_dota_hero_primal_beast', 'id': 137},\n",
-       " {'name': 'npc_dota_hero_muerta', 'id': 138}]"
+       " {'name': 'npc_dota_hero_crystal_maiden', 'id': 5}]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "heroes"
+    "heroes[:5]"
    ]
   },
   {
